# ChintAI

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test.html
src/: main.py
src/models/: property.py
src/scrapers/: base_scraper.py  suumo_scraper.py
