[tool.poetry]
name = "real-estate-scraper"
version = "0.1.0"
description = "A web scraper for real estate properties in Tokyo's 23 wards"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
selenium = "4.15.2"
webdriver-manager = "3.8.6"
pydantic = "2.5.2"
python-dotenv = "1.0.0"
aiohttp = "3.9.1"
asyncio = "3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scraper = "src.main:main" 